# mycobot_ros

./: LICENSE  README.md
.github/workflows/: industrialci.yml
mycobot_bringup/: CMakeLists.txt  package.xml
mycobot_bringup/launch/: demo.launch
mycobot_control/: CMakeLists.txt  package.xml
mycobot_control/config/: fake_ros_control.yaml  gazebo_control.yaml
mycobot_control/launch/: mycobot_fake_control.launch
mycobot_description/: CMakeLists.txt  package.xml
mycobot_description/launch/: display.launch  display_urdf.launch
mycobot_description/launch/config/: urdf.rviz
mycobot_description/meshes/dae/: link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
mycobot_description/meshes/stl/collision/: link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
mycobot_description/meshes/stl/visual/: base_link.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
mycobot_description/urdf/: color.xacro  mycobot.urdf  mycobot.urdf.xacro  mycobot.xacro
mycobot_gazebo/: CMakeLists.txt  package.xml
mycobot_gazebo/launch/: mycobot_with_emptyworld.launch  mycobot_with_table.launch
mycobot_gazebo/scripts/: download_gazebo_models.sh
mycobot_gazebo/worlds/: empty.world  table.world
mycobot_move_it_config/: .setup_assistant  CMakeLists.txt  package.xml
mycobot_move_it_config/config/: fake_controllers.yaml  joint_limits.yaml  mycobot.srdf  ros_controllers.yaml
mycobot_move_it_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  mycobot_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
