<?xml version="1.0"?>
<package format="2">
  <name>mycobot_bringup</name>
  <version>0.0.0</version>
  <description>The mycobot_bringup package</description>

  <maintainer email="tiryoh@gmail.com">Daisuke Sato</maintainer>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
