<?xml version="1.0"?>
<package format="2">
  <name>mycobot_control</name>
  <version>0.0.0</version>
  <description>The mycobot_control package</description>

  <maintainer email="tiryoh@gmail.com">Daisuke Sato</maintainer>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>position_controllers</depend>
</package>