<?xml version="1.0"?>
<package format="2">
  <name>mycobot_description</name>
  <version>0.0.0</version>
  <description>The mycobot_description package</description>

  <maintainer email="tiryoh@gmail.com">Daisuke Sato</maintainer>
  <author email="tiryoh@gmail.com">Daisuke Sato</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>urdf</depend>
</package>
